# hexmarket_rust_async_sdk

./: Cargo.toml  README.md
examples/: basic.rs  market_maker.rs
src/: auth.rs  client.rs  error.rs  lib.rs  ws.rs
src/api/: balances.rs  events.rs  markets.rs  mod.rs  orderbook.rs  orders.rs  positions.rs  trades.rs  vault.rs
src/types/: market.rs  mod.rs  order.rs  trade.rs
