[package]
name = "hexmarket-sdk"
version = "0.1.0"
edition = "2021"
authors = ["HexMarket Team"]
license = "MIT"
description = "Rust SDK for the HexMarket prediction market API — quantitative trading & market making"
repository = "https://github.com/hexmarketxyz/hexmarket_rust_async_sdk"
keywords = ["prediction-market", "trading", "solana", "sdk"]
categories = ["api-bindings", "finance"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
